# fetch

./: .gitignore  output.txt  pyproject.toml  requirements.txt  setup.py
doc.orig_models/orig_models/: conversion notes.txt  read_model.py
doc.orig_models/orig_models/model_a/: summary.txt
fetch/: data_sequence.py  model.py  model_orig.py  model_summaries.txt  predict.py  pulsar_data.py  train orig.py  train.py  tv_transfer_train.py  utils.py
fetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fetch/fetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fetch/models/: densenet.py  model.py  model_a.py  pulsar_data.py  xception.py
fetch/models/a_FT_DenseNet121_2_DMT_Xception_13_256/: ft_DenseNet121_2_dt_Xception_13_256.json
fetch/orig_models/: conversion notes.txt  model.txt
